# immortal-blog-server

./: .env  .gitignore  Cargo.toml  README.md  start.sh  test.rs
backend/: Cargo.toml  start.sh
backend/config/: log4rs.yaml
backend/configs/: log4rs.yaml
backend/migrations/2019-04-20-084730_create_posts/: down.sql  up.sql
backend/src/: main.rs  router.rs  state.rs  utils.rs
backend/src/common/: mod.rs  util.rs
backend/src/commons/: mod.rs  utils.rs
backend/src/db_executor/: login_handler.rs  mod.rs  user_info_handler.rs
backend/src/db_executors/: login.rs  register.rs
backend/src/handler/: mod.rs  user_info.rs
backend/src/handlers/: categories.rs  file.rs  login.rs  mod.rs  privileges.rs  register.rs  roles.rs  socket.rs  tags.rs  user_info.rs  users.rs
backend/src/middlewares/: auth.rs  mod.rs
backend/src/model/: blog.rs  immortal_response.rs  immortal_user.rs
backend/src/model/db_executor/: user_info_handler.rs
backend/src/models/: claims.rs  immortal_response.rs  mod.rs  schema.rs  state.rs
backend/src/models/db_executor/: login_handler.rs  mod.rs  user_info_handler.rs
backend/src/models/domains/: immortal_user.rs  mod.rs
backend/src/models/pojos/: auth.rs
backend/src/pojos/: auth.rs  mod.rs
common/: Cargo.toml
common/src/: configs.rs  immortal_error.rs  lib.rs  utils.rs
common/src/extends/: pagination.rs
common/src/extractors/: complex_query.rs  mod.rs
common/src/middlewares/: cors.rs
common/src/structs/: claims.rs  email_message.rs  immortal_error.rs  mod.rs
commons/: Cargo.toml  diesel.toml
commons/migrations/2019-05-14-111022_immortal_blog/: down.sql  up.sql
commons/src/: claims.rs  configs.rs  db_executor.rs  identity.rs  immortal_error.rs  immortal_response.rs  lib.rs  state.rs  utils.rs
commons/src/domains/: blog.rs  immortal_user.rs  mod.rs  schema.rs
commons/src/middlewares/: auth.rs  cors.rs  mod.rs
commons/src/pojos/: auth.rs
db/: Cargo.toml
db/src/: db.rs  lib.rs
db/src/db_executors/: login.rs  register.rs
db/src/domains/: immortal_user.rs
db/src/pojos/: auth.rs
immortal_blog_derive/: Cargo.toml
immortal_blog_derive/src/: lib.rs
privilege_macro/: Cargo.toml
privilege_macro/src/: lib.rs
share/: Cargo.toml
share/migrations/2019-05-22-044322_immortal_blog/: down.sql  up.sql
share/src/: db.rs  lib.rs  schema.rs  utils.rs
share/src/db_executors/: category.rs  login.rs  mod.rs  register.rs  role.rs  session.rs  tag.rs  user.rs
share/src/domains/: category.rs  immortal_user.rs  mod.rs  role.rs  tag.rs
share/src/structs/: auth.rs  category.rs  common.rs  mod.rs  socket.rs  table.rs  tag.rs  time.rs  user.rs
sql/: init.sql
static/: index.html
