[package]
name = "backend"
version = "0.1.0"
authors = ["龙云 <longyun@co-mall.com>"]
edition = "2018"

[dependencies]
commons = { path="../commons" }
listenfd = "0.3"
actix-web = "0.7.18"
diesel = { version = "1.4.2",  features = ["postgres","chrono","serde_json", "r2d2"] }
dotenv = "0.13.0"
serde = "1.0.90"
serde_json = "1.0.39"
serde_derive = "1.0.90"
log4rs = { version = "0.8.3", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4.6"
futures = "0.1.26"
chrono = { version = "0.4.6", features = ["serde"] }
