[package]
name = "backend"
version = "0.1.0"
authors = ["龙云 <longyun@co-mall.com>"]
edition = "2018"

[dependencies]
common = { path="../common" }
share = { path="../share" }
immortal_blog_derive = { path="../immortal_blog_derive" }
listenfd = "0.3.3"
actix-web = "1.0.0"
diesel = { version = "1.4.2", features = ["postgres","chrono","serde_json", "r2d2"] }
serde = "1.0.91"
serde_json = "1.0.39"
log4rs = { version = "0.8.3", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4.6"
futures = "0.1.27"
chrono = { version = "0.4.6", features = ["serde"] }
actix-redis = { version = "0.6.1", features = ["web"] }
redis-async = "0.4.5"
actix-service = "0.4.0"
actix = { version = "0.8.1", features = ["http"] }
actix-http = "0.2.0"
actix-files = "0.1.3"
actix-multipart = "0.1.2"
actix-web-actors = "1.0.0"
