[package]
name = "common"
version = "0.1.0"
authors = ["lynss <ly1169134156@163.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0"
serde = "1.0.91"
serde_derive = "1.0.91"
failure = "0.1.5"
jsonwebtoken = "6.0.1"
actix-redis = { git = "https://github.com/actix/actix-redis.git", features = ["web"] }
diesel = { version = "1.4.2", features = ["postgres","chrono","serde_json", "r2d2"] }
log = "0.4.6"
dotenv = "0.14.1"
futures = "0.1.27"
actix-service = "0.4.0"
actix = { version = "0.8.1", features = ["http"] }
actix-http = "0.2.0"
chrono = { version = "0.4.6", features = ["serde"] }
serde_qs = "0.5.0"
actix-cors = "0.1.0"
uuid = { version = "0.7.4", features = ["serde", "v4"]  }
lettre = "0.9.2"
lettre_email = "0.9.2"
