[package]
name = "commons"
version = "0.1.0"
authors = ["lynss <ly1169134156@163.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7.18"
serde = "1.0.90"
serde_derive = "1.0.90"
failure = "0.1.5"
jsonwebtoken = "6.0.0"
actix-redis = "0.5.1"
chrono = "0.4.6"
num_cpus = "1.10.0"
diesel = { version = "1.4.2",  features = ["postgres","chrono","serde_json", "r2d2"] }
log = "0.4.6"

