[package]
name = "share"
version = "0.1.0"
authors = ["龙云 <longyun@co-mall.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common" }
serde_json = "1.0.39"
serde_derive = "1.0.90"
chrono = "0.4.6"
diesel = { version = "1.4.2",  features = ["postgres","chrono","serde_json", "r2d2"] }
actix-web = "0.7.18"
num_cpus = "1.10.0"
serde = "1.0.90"
log = "0.4.6"
